# rail

./: .gitignore  TODO.md  instructions.md
app/: page.tsx
backend/: pyproject.toml  sam-template.yaml
backend/common/dao/: train_dao.py
backend/database/: db_config.py  schema.sql
backend/lambda/calculate_predictions/: requirements.txt
backend/lambda/process_train_detection/: handler.py  requirements.txt
backend/tests/database/: test_data_manager.py
components/: TrainMap.tsx  TrainPredictionForm.tsx
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/predict/: route.ts
frontend/components/: TrainMap.tsx  TrainPredictionForm.tsx
